gateway/envoy.yaml
static_resources:
  listeners:
    - address:
        socket_address:
          address: 0.0.0.0
          port_value: 10000
      filter_chains:
        - filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                codec_type: auto
                stat_prefix: ingress_http
                route_config:
                  name: local_route
                  virtual_hosts:
                    - name: backend
                      domains:
                        - "*"
                      routes:
                        - match:
                            prefix: "/pinger-service"
                          route:
                            cluster: pinger-service
                http_filters:
                - name: envoy.filters.http.jwt_authn
                  typed_config:
                    "@type": type.googleapis.com/envoy.extensions.filters.http.jwt_authn.v3.JwtAuthentication
                    providers:
                      my_jwks_provider:
                        # uncomment local_jwks section and comment remote_jwks section to get local jwt key
                        # local_jwks:
                          # inline_string: '{"keys":[{"kty":"oct","alg":"HS256","k":"MySekretKey"}]}'
                        remote_jwks:
                          http_uri:
                            uri: https://i-guess-this-is-optional.com/jwks.json
                            cluster: jwks-provider
                            timeout: 1s
                          cache_duration:
                            seconds: 300
                        forward: true
                        forward_payload_header: x-jwt-payload
                    rules:
                      - match:
                          prefix: "/pinger-service/protected"
                        requires:
                          provider_name: "my_jwks_provider"
                - name: envoy.filters.http.router
                  typed_config:
                    "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
                access_log:
                - name: envoy.access_loggers.stdout
                  typed_config:
                    "@type": type.googleapis.com/envoy.extensions.access_loggers.stream.v3.StdoutAccessLog
  clusters:
    - name: pinger-service
      connect_timeout: 0.25s
      type: strict_dns
      lb_policy: round_robin
      load_assignment:
        cluster_name: pinger-service
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      # address: 192.168.1.169
                      address: "pinger-service"
                      port_value: 8000
    - name: jwks-provider
      connect_timeout: 0.25s
      type: strict_dns
      lb_policy: round_robin
      load_assignment:
        cluster_name: jwks-provider
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      # address: 192.168.1.169
                      address: "jwks-provider"
                      port_value: 8010
